changes for echo issue

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,7 +17,7 @@
 
   <button onclick="playVideoFromCamera()">open camera</button>
 
-  <video id="localVideo" autoplay playsinline controls="false">
+  <video id="localVideo" autoplay playsinline controls="false" muted="muted">
   </video>
 
   <div >
